--- a/crud_pdo/login/index.html
+++ b/crud_pdo/login/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Ingresar </button>
                 </form>
-                <div class="col-12 forgot">
+                <!-- <div class="col-12 forgot">
                     <a href="#">Recordar contrasena?</a>
                 </div>
                 <div th:if="${param.error}" class="alert alert-danger" role="alert">
@@ -42,7 +42,7 @@
 		        </div>
 		        <div th:if="${param.logout}" class="alert alert-success" role="alert">
 		            You have been logged out.
-		        </div>
+		        </div> -->
             </div>
         </div>
     </div>
